<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/background"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/display2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:inputType="none"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="labelFor,SpeakableTextPresentCheck" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.01999998">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/logBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="logBtn"
                android:text="@string/log"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/lnBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="lnBtn"
                android:text="@string/ln"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sinBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sinBtn"
                android:text="@string/sin"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cosBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="cosBtn"
                android:text="@string/cos"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tanBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="tanBtn"
                android:text="@string/tan"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/percentageBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="percentageBtn"
                android:text="@string/percentage"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sqrtBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sqrtBtn"
                android:text="@string/squareRoot"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/powerBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="powerBtn"
                android:text="@string/power"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/piBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="piBtn"
                android:text="@string/pi"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exponentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="exponentBtn"
                android:text="@string/exponent"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ACBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="ACBtn"
                android:text="@string/AC"
                android:textColor="@color/light_blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/opBracketBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="openingBracketBtn"
                android:text="@string/openingBracket"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clBracketBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="closingBracketBtn"
                android:text="@string/closingBracket"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/backspaceBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/backspace"
                android:onClick="backspaceBtn"
                app:srcCompat="@drawable/backspace"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sevenBtn"
                android:text="@string/seven"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="eightBtn"
                android:text="@string/eight"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="nineBtn"
                android:text="@string/nine"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="divideBtn"
                android:text="@string/divide"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fourBtn"
                android:text="@string/four"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fiveBtn"
                android:text="@string/five"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sixBtn"
                android:text="@string/six"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="multiplyBtn"
                android:text="@string/multiply"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="oneBtn"
                android:text="@string/one"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="twoBtn"
                android:text="@string/two"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="threeBtn"
                android:text="@string/three"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="minusBtn"
                android:text="@string/minus"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="pointBtn"
                android:text="@string/point"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="equalBtn"
                android:text="@string/equal"
                android:textColor="@color/light_blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="plusBtn"
                android:text="@string/plus"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>